Refactor: change icon (#6)

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hello-pangea/dnd": "^16.5.0",
+    "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.3.4",
     "@mui/base": "^5.0.0-beta.34",
     "@mui/icons-material": "^5.15.0",
